2010-05-10  Kevin B. Kenny  <kennykb@acm.org>

	* aclocal.m4:	Synchronized with tdbc.
	* configure.in:	Advanced version number to 1.0b15. Advanced TEA
			version to 3.7. Corrected the way that stub libraries
			are located on VC++.
	* generic/tdbcpostgres.c: 
			Corrected a number of errors and warnings in the
			VC++ build.
	* README:	Advanced to 1.0b15
	* tclconfig/:	Advanced to TEA 3.7
	* configure:	autoconf-2.59
	
2010-05-10  Andreas Kupries  <andreask@activestate.com>

	* generic/tdbcpostgres.c: Fixed violations of strict C89.
	* Makefile.in: Removed attempt to generate a stub library. Drivers
	  do not export stub tables.

2010-05-07  Andreas Kupries  <andreask@activestate.com>

	* generic/fakehq.h: Fixed inclusion of pqstubs.h -> pqStubs.h.

2010-05-01  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in:
	* Makefile.in:
	* generic/fakepq.h (new file):
	* generic/pqStubDefs.txt (new file):
	* generic/pqStubInit.c (new file):
	* generic/pqStubs.h (new file):
	* generic/tdbcpostgres.c: 
		Modified to load libpq using Tcl_LoadFile and not
		link to its client library, nor include the standard
		pq-fe headers. This change allows tdbc::postgres to
		build when the build system lacks a PostgreSQL installation.
	
2010-04-25  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in: Changed TDBC_* environment variables to tdbc_* for
	* README:       better TEA compatibility. Advanced version to 1.0b14.
	* configure:    autoconf 2.59
	
2009-09-29  Kevin B. Kenny  <kennykb@acm.org>

	* tests/tdbcpostgres.test: Changed all TEST_* environment variables
				   to TDBCPOSTGRES_* for easier scripting
			 	   of combined builds and tests.
	
2009-09-23  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcpostgres.c: Removed an ugly workaround for a
	                          bug in Tcl_SubstObj.
	* configure.in: 
	* README:		Advanced version to 1.0b13
	* configure:		autoconf 2.59
	
2009-09-19  Kevin B. Kenny  <kennykb@acm.org>

	* configure (New file): autoconf 2.59